# jah

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
src/jah/: __init__.py  app.py  cli.py  models.py  parser.py
tests/: test_app.py  test_models.py
