[project]
name = "jah"
version = "0.1.0"
description = "Terminal UI for markdown ticket visualization."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyperclip>=1.8.2",
    "pyyaml>=6.0.1",
    "textual>=0.52,<1.0",
]

[project.scripts]
jah = "jah.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
